  - Don't push down LIMIT without an ORDER BY clause.
    This can lead to wrong results in some cases.
    Report by "fbattke".
  - Fix support for query parameters of type "uuid".
    This led to errors like
       error executing query: OCINumberFromText failed to convert parameter
       OCI-22062: invalid input string [8feee298-7ce5-4761-9487-34cab831fead]
    Report by "victorras".

Version 2.6.0, released 2023-09-08

  Note: This release will fail to build with minor releases below 13.10,
        14.7 and 15.2.  Other major versions are not affected.  oracle_fdw
        binaries built with later minor releases won't load with older
        PostgreSQL binaries, complaining about undefined symbols.
        Keep the PostgreSQL server updated!

  Bugfixes:
  - Inserting CLOBs with the server option "nchar" on can lead to the error
    "ORA-24806: LOB form mismatch".
    Report and patch by "jopoly".
  - Don't push down LIMIT with FOR SHARE or FOR UPDATE.  That caused the error
    ORA-02014: cannot select FOR UPDATE from view with DISTINCT, GROUP BY, etc.
    Reported by Marti Raudsepp.
  - Fix BEFORE UPDATE triggers.
    If a BEFORE UPDATE trigger modified a column that was not updated, the
    changed column was not propagated to Oracle.
    Report and diagnosis by "jopoly".
  - Don't free() strings in the environment.
    This could lead to crashes and unpredictable behavior.
  - Conversions from TIMESTAMP WITH LOCAL TIME ZONE to "timestamp without time
    zone" were incorrect.  To fix, set the Oracle session time zone from the
    PostgreSQL parameter "timezone".  Since not all time zones are accepted by
    all Oracle servers, this must be explicitly enabled by setting the
    "set_timezone" option on the foreign server.
    Thanks to Sébastien Caunes for help with this.
  - Make auto_explain work with oracle_fdw.  This used to cause an error:
    oracleQueryPlan internal error: statement handle is not NULL