@@ -9,6 +9,11 @@ Version 2.7.0
        error executing query: OCINumberFromText failed to convert parameter
        OCI-22062: invalid input string [8feee298-7ce5-4761-9487-34cab831fead]
     Report by "victorras".
+  - Fix a memory leak in statements that return LOBs.
+    The memory for LOB locators didn't get released before the end of the
+    transaction, so running many statements in a single transaction could cause
+    out-of-memory errors and server crashes.
+    Report by "JosefMachytkaNetApp".
 
 Version 2.6.0, released 2023-09-08
 
